--- a/art/index.html
+++ b/art/index.html
@@ -140,7 +140,7 @@ h1 {
         });
       }
      var galleryRowContainers = document.querySelectorAll('.gallery-row-container');
-galleryRowContainers.forEach(function (row) {
+galleryRowContainers.forEach(function (container) {
   var scrollLeft = row.scrollLeft;
   var scrollWidth = row.scrollWidth;
 
