--- a/art/index.html
+++ b/art/index.html
@@ -81,10 +81,12 @@ h1 {
 
       .scroll-button.right {
         right: 0;
+        margin-right: 30px;
       }
 
       .scroll-button.left {
         left: 0;
+        margin-left: 30px;
       }
 
            .zoom {
