--- a/art/index.html
+++ b/art/index.html
@@ -80,13 +80,11 @@ h1 {
       }
 
       .scroll-button.right {
-        right: 0;
-        margin-right: 30px;
+        right: 100px;
       }
 
       .scroll-button.left {
-        left: 0;
-        margin-left: 30px;
+        left: 100px;
       }
 
            .zoom {
