--- a/art/index.html
+++ b/art/index.html
@@ -86,7 +86,11 @@ h1 {
       .scroll-button.left {
         left: 100px;
       }
-
+           .gallery-row-container {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+      }
            .zoom {
         transform: scale(1.3);
       }
