--- a/art/index.html
+++ b/art/index.html
@@ -70,7 +70,7 @@ h1 {
 
       /* Style the scroll buttons */
       .scroll-button {
-        background-color: transparent;
+        background-color: rgba(0, 0, 0, 0.5);
         border: none;
         color: #fff;
         font-size: 2em;
