--- a/art/index.html
+++ b/art/index.html
@@ -9,8 +9,9 @@
       /* 設定網頁背景圖片 */
       body {
         background-image: url("images/backgroung-3.jpg");
-        background-size: cover;
+        background-size: contain;
         background-position: center;
+        background-attachment: fixed;
         font-family: Arial, sans-serif;
         font-size: 20px;
         color: #FFA500;
