--- a/art/index.html
+++ b/art/index.html
@@ -105,6 +105,12 @@ h1 {
   width: 100%;
   background-color: rgba(0, 0, 0, 0.5);
 }
+        .footer p {
+  color: white;
+  text-align: center;
+  font-size: 14px;
+  margin-top: 10px;
+}
     </style>
   </head>
   <body>
@@ -202,5 +208,9 @@ galleryRows.forEach(function (row) {
 });
     </script>
    <div class="footer"></div>
+     <p>
+    This website is built on the free platform GitHub with the help of users and ChatGPT. All images are generated using the AI drawing tool Midjourney.
+  </p>
+</div>
   </body>
 </html>
