--- a/art/index.html
+++ b/art/index.html
@@ -98,19 +98,23 @@ h1 {
       ::-webkit-scrollbar {
         width: 0;
       }
-      .footer {
-  position: relative;
-  bottom: 0px;
-  height: 100px;
-  width: 100%;
-  background-color: rgba(0, 0, 0, 0.5);
-}
-        .footer p {
-  color: white;
-  text-align: center;
-  font-size: 14px;
-  margin-top: 10px;
-}
+       .footer {
+    position: relative;
+    bottom: 0;
+    height: 100px;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  }
+
+  .footer p {
+    font-size: 14px;
+    color: #fff;
+    text-align: center;
+    max-width: 80%;
+  }
     </style>
   </head>
   <body>
