--- a/art/index.html
+++ b/art/index.html
@@ -15,6 +15,7 @@
         font-family: Arial, sans-serif;
         font-size: 20px;
         color: #FFA500;
+        overflow-y: scroll;
       }
 h1 {
   text-align: center;
