--- a/art/index.html
+++ b/art/index.html
@@ -31,13 +31,14 @@ h1 {
         display: flex;
         flex-wrap: wrap;
         scrollbar-width: none;
+        overflow-y: scroll;
       }
       .gallery-row {
         position: relative;
         display: flex;
         justify-content: flex-start;
         overflow-x: scroll;
-        overflow-y: scroll;
+        overflow-y: hidden;
         margin-bottom: 20px; 
         width: 100%;
         padding-right: 20px;
