--- a/art/index.html
+++ b/art/index.html
@@ -16,6 +16,10 @@
         font-size: 20px;
         color: #FFA500;
       }
+html, body {
+  height: 100%;
+  overflow-y: scroll;
+}
 h1 {
   text-align: center;
   font-family: 'Pacifico', serif;
