--- a/art/index.html
+++ b/art/index.html
@@ -41,7 +41,7 @@ h1 {
         display: flex;
         justify-content: flex-start;
         overflow-x: scroll;
-        overflow-y: hidden;
+        overflow-y: auto;
         margin-bottom: 20px; 
         width: 100%;
         padding-right: 20px;
