--- a/art/index.html
+++ b/art/index.html
@@ -15,10 +15,12 @@
         font-family: Arial, sans-serif;
         font-size: 20px;
         color: #FFA500;
+        overflow-y: scroll;
       }
 html, body {
   height: 100%;
   overflow-y: auto;
+  min-height: 100%;
 }
 h1 {
   text-align: center;
