--- a/art/index.html
+++ b/art/index.html
@@ -16,11 +16,11 @@
         font-size: 20px;
         color: #FFA500;
         overflow-y: scroll;
+        height: 100%
       }
-html, body {
+html {
   height: 100%;
   overflow-y: auto;
-  min-height: 100%;
 }
 h1 {
   text-align: center;
