--- a/art/index.html
+++ b/art/index.html
@@ -43,7 +43,7 @@ h1 {
         display: flex;
         justify-content: flex-start;
         overflow-x: scroll;
-        overflow-y: auto;
+        overflow-y: scroll;
         margin-bottom: 20px; 
         width: 100%;
         padding-right: 20px;
@@ -102,7 +102,7 @@ h1 {
         transform: scale(1.3);
       }
       ::-webkit-scrollbar {
-        width: 0;
+        width: 10;
       }
        .footer {
     position: relative;
