--- a/art/index.html
+++ b/art/index.html
@@ -15,13 +15,7 @@
         font-family: Arial, sans-serif;
         font-size: 20px;
         color: #FFA500;
-        overflow-y: scroll;
-        height: 100%
       }
-html {
-  height: 100%;
-  overflow-y: auto;
-}
 h1 {
   text-align: center;
   font-family: 'Pacifico', serif;
@@ -43,7 +37,7 @@ h1 {
         display: flex;
         justify-content: flex-start;
         overflow-x: scroll;
-        overflow-y: scroll;
+        overflow-y: hidden;
         margin-bottom: 20px; 
         width: 100%;
         padding-right: 20px;
