--- a/art/index.html
+++ b/art/index.html
@@ -36,7 +36,7 @@ h1 {
         position: relative;
         display: flex;
         justify-content: flex-start;
-        overflow-x: scroll;
+        overflow-x: hidden;
         overflow-y: hidden;
         margin-bottom: 20px; 
         width: 100%;
