--- a/art/index.html
+++ b/art/index.html
@@ -36,7 +36,7 @@ h1 {
         position: relative;
         display: flex;
         justify-content: flex-start;
-        overflow-x: hidden;
+        overflow-x: scroll;
         overflow-y: hidden;
         margin-bottom: 20px; 
         width: 100%;
@@ -96,7 +96,7 @@ h1 {
         transform: scale(1.3);
       }
       ::-webkit-scrollbar {
-        width: 10;
+        width: 0;
       }
        .footer {
     position: relative;
