--- a/art/index.html
+++ b/art/index.html
@@ -15,6 +15,7 @@
         font-family: Arial, sans-serif;
         font-size: 20px;
         color: #FFA500;
+        overflow-y: scroll;
       }
 h1 {
   text-align: center;
@@ -96,7 +97,7 @@ h1 {
         transform: scale(1.3);
       }
       ::-webkit-scrollbar {
-        width: 0;
+        width: 5px;
       }
        .footer {
     position: relative;
