--- a/art/index.html
+++ b/art/index.html
@@ -17,6 +17,9 @@
         color: #FFA500;
         overflow-y: scroll;
       }
+body, html {
+  height: 100%;
+}
 h1 {
   text-align: center;
   font-family: 'Pacifico', serif;
