--- a/art/index.html
+++ b/art/index.html
@@ -105,14 +105,13 @@ h1 {
        .footer {
     position: relative;
     bottom: 0;
-    height: 100px;
+    height: 100;
     width: 100%;
     background-color: rgba(0, 0, 0, 0.5);
     display: flex;
     align-items: center;
     justify-content: center;
   }
-
   .footer p {
     font-size: 14px;
     color: #fff;
@@ -215,8 +214,8 @@ galleryRows.forEach(function (row) {
   row.parentElement.appendChild(rightButton);
 });
     </script>
-   <div class="footer"></div>
-     <p>
+   <div class="footer">
+  <p>
     This website is built on the free platform GitHub with the help of users and ChatGPT. All images are generated using the AI drawing tool Midjourney.
   </p>
 </div>
