--- a/art/index.html
+++ b/art/index.html
@@ -90,7 +90,7 @@ h1 {
       }
            .gallery-row-container {
         display: flex;
-        justify-content: space-between;
+        justify-content: space-around;
         align-items: center;
       }
            .zoom {
