--- a/art/index.html
+++ b/art/index.html
@@ -115,9 +115,58 @@ h1 {
     text-align: center;
     max-width: 80%;
   }
+   .header {
+  position: relative;
+}
+
+.dropdown-container {
+  position: absolute;
+  top: 50px;
+  right: 20px;
+}
+/* 下拉式選單樣式 */
+.dropdown {
+  position: relative;
+  display: inline-block;
+}
+
+.dropdown-content {
+  display: none;
+  position: absolute;
+  background-color: rgba(0, 0, 0, 0.5);
+  min-width: 160px;
+  z-index: 1;
+}
+
+.dropdown-content a {
+  color: #fff;
+  padding: 12px 16px;
+  text-decoration: none;
+  display: block;
+}
+
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+.dropbtn {
+  background-color: transparent;
+  color: #fff;
+  font-size: 16px;
+  border: none;
+  cursor: pointer;
+}
     </style>
   </head>
   <body>
+     <div class="dropdown">
+  <button class="dropbtn">choose a topic...</button>
+  <div class="dropdown-content">
+    <a href="#">Cats</a>
+    <a href="#">Girls</a>
+    <a href="#">WoW</a>
+  </div>
+</div>
     <h1>Cats & Ladies</h1>
     <p></p>
     <div class="gallery">
