--- a/art/index.html
+++ b/art/index.html
@@ -121,8 +121,8 @@ h1 {
 
     .dropdown-container {
       position: absolute;
-      top: 50px;
-      right: 20px;
+      top: 80px;
+      left: 100px;
     }
 
     /* 下拉式選單樣式 */
@@ -163,11 +163,11 @@ h1 {
     <div class="header">
     <div class="dropdown-container">
       <div class="dropdown">
-        <button class="dropbtn">選擇畫廊</button>
+        <button class="dropbtn">Choose a topic...</button>
         <div class="dropdown-content">
-          <a href="#">畫廊1</a>
-          <a href="#">畫廊2</a>
-          <a href="#">畫廊3</a>
+          <a href="#">Cats</a>
+          <a href="#">Girls</a>
+          <a href="#">WoW style</a>
         </div>
       </div>
     </div>
