--- a/art/index.html
+++ b/art/index.html
@@ -127,7 +127,7 @@ h1 {
 
     /* 下拉式選單樣式 */
     .dropdown {
-      position: relative;
+      position: fixed;
       display: inline-block;
     }
 
