--- a/art/index.html
+++ b/art/index.html
@@ -120,7 +120,7 @@ h1 {
     }
 
     .dropdown-container {
-      position: absolute;
+      position: relative;
       top: 80px;
       left: 100px;
     }
