--- a/art/index.html
+++ b/art/index.html
@@ -120,14 +120,14 @@ h1 {
     }
 
     .dropdown-container {
-      position: relative;
+      position: absolute;
       top: 80px;
       left: 100px;
     }
 
     /* 下拉式選單樣式 */
     .dropdown {
-      position: fixed;
+      position: relative;
       display: inline-block;
     }
 
