--- a/art/index.html
+++ b/art/index.html
@@ -116,14 +116,15 @@ h1 {
     max-width: 80%;
   }
     .dropdown-container {
-      position: fixed;
+      position: relative;
+      display: flex;
       top: 80px;
       left: 100px;
     }
 
     /* 下拉式選單樣式 */
     .dropdown {
-      position: relative;
+      position: fixed;
       display: inline-block;
     }
 
