--- a/art/index.html
+++ b/art/index.html
@@ -116,7 +116,7 @@ h1 {
     max-width: 80%;
   }
     .dropdown-container {
-      position: relative;
+      position: fixed;
       display: flex;
       top: 80px;
       left: 100px;
