--- a/art/index.html
+++ b/art/index.html
@@ -118,8 +118,8 @@ h1 {
     .dropdown-container {
       position: fixed;
       display: flex;
-      top: 80px;
-      left: 100px;
+      top: 10%;
+      left: 10%;
     }
 
     /* 下拉式選單樣式 */
