--- a/art/index.html
+++ b/art/index.html
@@ -116,8 +116,7 @@ h1 {
     max-width: 80%;
   }
     .dropdown-container {
-      position: fixed;
-      display: flex;
+      position: absolute;
       top: 10%;
       left: 10%;
     }
