--- a/art/index.html
+++ b/art/index.html
@@ -116,9 +116,9 @@ h1 {
     max-width: 80%;
   }
     .dropdown-container {
-      position: absolute;
-      top: 10%;
-      left: 10%;
+      position: sticky;
+      top: 50px;
+      left: 50px;
     }
 
     /* 下拉式選單樣式 */
