--- a/art/index.html
+++ b/art/index.html
@@ -115,16 +115,11 @@ h1 {
     text-align: center;
     max-width: 80%;
   }
-    .dropdown-container {
-      position: sticky;
-      top: 50px;
-      left: 50px;
-      display: inline-block;
-    }
-
     /* 下拉式選單樣式 */
     .dropdown {
-      position: fixed;
+      position: relative;
+      top: 50px;
+      left: 50px;
       display: inline-block;
     }
 
