--- a/art/index.html
+++ b/art/index.html
@@ -23,6 +23,7 @@ h1 {
   font-size: 38px;
   font-weight: bold;
   color: lightyellow;
+  margin-top: 50px;
 }
 
       .gallery-wrapper {
@@ -117,9 +118,9 @@ h1 {
   }
     /* 下拉式選單樣式 */
     .dropdown {
-      position: relative;
+      position: absolute;
       top: 50px;
-      left: 50px;
+      left: 100px;
       display: inline-block;
     }
 
