--- a/art/index.html
+++ b/art/index.html
@@ -16,6 +16,7 @@
         font-size: 20px;
         color: #FFA500;
         overflow-y: scroll;
+        min-width: 1500x;
       }
 h1 {
   text-align: center;
