--- a/art/index.html
+++ b/art/index.html
@@ -17,6 +17,7 @@
         color: #FFA500;
         overflow-y: scroll;
         min-width: 1000x;
+        box-sizing: border-box;
       }
    h1 {
       text-align: center;
