--- a/art/index.html
+++ b/art/index.html
@@ -29,8 +29,7 @@
       }
 
      .gallery-wrapper {
-       width: 100%;
-       max-width: 800px;
+       width: 800px;
        margin:  auto;
        display: flex;
        flex-wrap: wrap;
