--- a/art/index.html
+++ b/art/index.html
@@ -122,6 +122,7 @@
     top: 50px;
     left: 100px;
     display: inline-block;
+    width: 200px;
     }
 
     .dropdown-content {
@@ -130,6 +131,8 @@
       background-color: rgba(0, 0, 0, 0.5);
       min-width: 160px;
       z-index: 1;
+      width: 100%; /* 設定寬度為 100% */
+      left: 0; /* 設定左側對齊 */
       }
     .dropdown-content a {
       color: #fff;
