--- a/art/index.html
+++ b/art/index.html
@@ -34,13 +34,6 @@
     .dropdown select:focus {
     outline: none;
     }
-   <div class="dropdown">
-   <select id="menu" onchange="changeContent()">
-    <option value="default" selected>預設內容</option>
-    <option value="option1">選項1</option>
-    <option value="option2">選項2</option>
-   </select>
-   </div>
    h1 {
    text-align: center;
    font-family: 'Pacifico', serif;
@@ -127,22 +120,29 @@
     bottom: 0;
     height: 100;
     width: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    align-items: center;
-    justify-content: center;
-  }
-  .footer p {
-    font-size: 14px;
-    color: #fff;
-    text-align: center;
-    max-width: 80%;
-  }
-    </style>
+background-color: rgba(0, 0, 0, 0.5);
+display: flex;
+align-items: center;
+justify-content: center;
+}
+.footer p {
+font-size: 14px;
+color: #fff;
+text-align: center;
+max-width: 80%;
+}
+</style>
+
   </head>
   <body>
     <h1>Cats & Ladies</h1>
-    <p></p>
+    <div class="dropdown">
+       <select id="menu" onchange="changeContent()">
+        <option value="default" selected>預設內容</option>
+        <option value="option1">選項1</option>
+        <option value="option2">選項2</option>
+       </select>
+    </div>
     <div class="gallery">
       <div class="gallery-wrapper">
         <div class="gallery-row-container">
@@ -182,59 +182,58 @@
 galleryRows.forEach(function (row) {
   var scrollLeft = row.scrollLeft;
   var scrollWidth = row.scrollWidth;
+// Create left and right scroll buttons
+var leftButton = document.createElement('button');
+var rightButton = document.createElement('button');
 
-  // Create left and right scroll buttons
-  var leftButton = document.createElement('button');
-  var rightButton = document.createElement('button');
+leftButton.innerHTML = '◀'; // left arrow
+rightButton.innerHTML = '▶'; // right arrow
 
-  leftButton.innerHTML = '&#9664;'; // left arrow
-  rightButton.innerHTML = '&#9654;'; // right arrow
+leftButton.classList.add('scroll-button', 'left');
+rightButton.classList.add('scroll-button', 'right');
 
-  leftButton.classList.add('scroll-button', 'left');
-  rightButton.classList.add('scroll-button', 'right');
+// Check scroll position on scroll event
+row.addEventListener('scroll', function () {
+var currentScroll = row.scrollLeft;
+var totalWidth = 0;
+row.querySelectorAll('img').forEach(function (img) {
+totalWidth += img.offsetWidth;
+});
+if (currentScroll <= 0) {
+  leftButton.classList.add('disabled');
+} else {
+  leftButton.classList.remove('disabled');
+}
 
-  // Check scroll position on scroll event
-  row.addEventListener('scroll', function () {
-    var currentScroll = row.scrollLeft;
-    var totalWidth = 0;
-    row.querySelectorAll('img').forEach(function (img) {
-      totalWidth += img.offsetWidth;
-    });
+if (currentScroll + row.offsetWidth >= totalWidth) {
+  rightButton.classList.add('disabled');
+} else {
+  rightButton.classList.remove('disabled');
+}
+});
+// Scroll left and right on button click
+leftButton.addEventListener('click', function () {
+row.scrollBy({
+  left: -200,
+  behavior: 'smooth'
+});
+});
+rightButton.addEventListener('click', function () {
+row.scrollBy({
+left: 200,
+behavior: 'smooth'
+});
+});
+// Add scroll buttons to the DOM
+row.parentElement.appendChild(leftButton);
+row.parentElement.appendChild(rightButton);
+});
+function changeContent() {
+var selectedOption = document.getElementById("menu").value;
+// Implement your functionality for changing the content based on the selected option here
+}
+</script>
 
-    if (currentScroll <= 0) {
-      leftButton.classList.add('disabled');
-    } else {
-      leftButton.classList.remove('disabled');
-    }
-
-    if (currentScroll + row.offsetWidth >= totalWidth) {
-      rightButton.classList.add('disabled');
-    } else {
-      rightButton.classList.remove('disabled');
-    }
-    });
-    // Scroll left and right on button click
-    leftButton.addEventListener('click', function () {
-    row.scrollBy({
-      left: -200,
-      behavior: 'smooth'
-     });
-    });
-    rightButton.addEventListener('click', function () {
-    row.scrollBy({
-      left: 200,
-      behavior: 'smooth'
-     });
-   });
-  // Add scroll buttons to the DOM
-  row.parentElement.appendChild(leftButton);
-  row.parentElement.appendChild(rightButton);
-  });
- function changeContent() {
-  var selectedOption = document.getElementById("menu").value;
-  // Implement your functionality for changing the content based on the selected option here
-  }
-    </script>
    <div class="footer">
    <p>
     This website is built on the free platform GitHub with the help of users and ChatGPT. All images are generated using the AI drawing tool Midjourney.
